# python_basic

./: .gitignore  README.md  launch.sh  pyproject.toml
model/: __init__.py
model/deeponet/: deeponet.py
tests/: test_env.py
