[project]
name = "54rt"
version = "0.1.0"
description = "Hackathon project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
]




[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {} # "QR1" = "models/QR1/", "QR2" = "models/QR2/"
packages = [] # ["QR1", "QR2"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
